Aggiornato e migliorato predictive maintenance

--- a/1. Recommendations e web scraping/recommendations.ipynb
+++ b/1. Recommendations e web scraping/recommendations.ipynb
@@ -58,11 +58,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "\n",
     "import faiss\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -292,14 +292,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "\n",
     "def cosine_similarity(a, b):\n",
     "    return np.dot(a, b) / (np.linalg.norm(a) * np.linalg.norm(b))\n",
     "\n",
+    "\n",
     "def l2_distance(a, b):\n",
     "    return np.linalg.norm(a - b)\n",
+    "\n",
     "\n",
     "# Vettori di esempio (2D per visualizzazione)\n",
     "v1 = np.array([1, 0])\n",
@@ -315,15 +318,15 @@
     "origin = np.array([0, 0])\n",
     "\n",
     "plt.figure(figsize=(6, 6))\n",
-    "plt.quiver(*origin, *v1, color='r', scale=3, label='v1')\n",
-    "plt.quiver(*origin, *v2, color='g', scale=3, label='v2')\n",
-    "plt.quiver(*origin, *v3, color='b', scale=3, label='v3')\n",
+    "plt.quiver(*origin, *v1, color=\"r\", scale=3, label=\"v1\")\n",
+    "plt.quiver(*origin, *v2, color=\"g\", scale=3, label=\"v2\")\n",
+    "plt.quiver(*origin, *v3, color=\"b\", scale=3, label=\"v3\")\n",
     "plt.xlim(-1.5, 1.5)\n",
     "plt.ylim(-1.5, 1.5)\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
     "plt.title(\"Visualizzazione vettori e loro angoli\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
