--- a/1. Recommendations e web scraping/web_scraping.ipynb
+++ b/1. Recommendations e web scraping/web_scraping.ipynb
@@ -37,9 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import csv\n",
+    "\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import csv"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -164,16 +165,12 @@
     "while url:\n",
     "    response = requests.get(url)\n",
     "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "    \n",
+    "\n",
     "    for quote in soup.find_all(\"div\", class_=\"quote\"):\n",
     "        text = quote.find(\"span\", class_=\"text\").get_text()\n",
     "        author = quote.find(\"small\", class_=\"author\").get_text()\n",
     "        tags = [tag.get_text() for tag in quote.find_all(\"a\", class_=\"tag\")]\n",
-    "        quotes_data.append({\n",
-    "            \"text\": text,\n",
-    "            \"author\": author,\n",
-    "            \"tags\": tags\n",
-    "        })\n",
+    "        quotes_data.append({\"text\": text, \"author\": author, \"tags\": tags})\n",
     "\n",
     "    next_btn = soup.find(\"li\", class_=\"next\")\n",
     "    if next_btn:\n",
@@ -227,7 +224,7 @@
     "    for row in quotes_data:\n",
     "        row[\"tags\"] = \", \".join(row[\"tags\"])\n",
     "        writer.writerow(row)\n",
-    "print(f\"Dati salvati su {csv_filename}\")\n"
+    "print(f\"Dati salvati su {csv_filename}\")"
    ]
   },
   {
@@ -262,7 +259,7 @@
     "    data = response_auth.json()\n",
     "    print(data)\n",
     "else:\n",
-    "    print(f\"Autenticazione fallita con codice {response_auth.status_code}\")\n"
+    "    print(f\"Autenticazione fallita con codice {response_auth.status_code}\")"
    ]
   },
   {
@@ -307,8 +304,8 @@
    "outputs": [],
    "source": [
     "def fetch_robots_txt(base_url):\n",
-    "    if not base_url.endswith('/'):\n",
-    "        base_url += '/'\n",
+    "    if not base_url.endswith(\"/\"):\n",
+    "        base_url += \"/\"\n",
     "    robots_url = base_url + \"robots.txt\"\n",
     "    response = requests.get(robots_url)\n",
     "    if response.status_code == 200:\n",
@@ -316,10 +313,11 @@
     "    else:\n",
     "        return None\n",
     "\n",
+    "\n",
     "site = \"https://www.wikipedia.org\"\n",
     "robots_txt = fetch_robots_txt(site)\n",
     "print(\"robots.txt content:\\n\")\n",
-    "print(robots_txt)\n"
+    "print(robots_txt)"
    ]
   },
   {
@@ -364,6 +362,7 @@
     "            if path:\n",
     "                rules[\"Allow\"].append(path)\n",
     "    return rules\n",
+    "\n",
     "\n",
     "if robots_txt:\n",
     "    rules = parse_robots_txt(robots_txt)\n",
