--- a/2. Smart factory/predictive_maintenance.ipynb
+++ b/2. Smart factory/predictive_maintenance.ipynb
@@ -7,24 +7,38 @@
    "source": [
     "# Manutenzione Predittiva: Stima della Remaining Useful Life (RUL)\n",
     "\n",
-    "Questo notebook esplora metodi per stimare la Remaining Useful Life (RUL) di componenti o macchinari a partire da dati di degradazione temporali.\n",
+    "Questo notebook mostra un esempio di **manutenzione predittiva**. L'obiettivo è prevedere il momento in cui un componente meccanico si guasterà, in modo da pianificare interventi manutentivi ottimali.\n",
     "\n",
-    "L’obiettivo è fornire una stima utile per pianificare interventi di manutenzione predittiva, riducendo fermi non programmati e ottimizzando i costi operativi.\n",
+    "Il processo si articola in **3 fasi**:\n",
     "\n",
-    "Il notebook si articola in due fasi principali:\n",
-    "\n",
-    "1. **Stima statistica preliminare** basata su parametri tipici da datasheet o modelli parametrici (es. Weibull), utilizzabile quando non è ancora disponibile un archivio di dati storici.\n",
-    "2. **Stima basata su similarità temporale** utilizzando tecniche di Dynamic Time Warping (DTW) per confrontare curve di degrado multivariate, applicabile una volta acquisito un archivio di curve.\n",
-    "\n",
-    "Verrà mostrato un esempio completo di simulazione di dati, visualizzazione, e valutazione della RUL con entrambi gli approcci."
+    "1. **Simulazione della curva di degrado** del componente nel tempo.\n",
+    "2. **Stima della Remaining Useful Life (RUL)** tramite tre approcci:\n",
+    "   - **Modello statistico a priori (Weibull)**: adatto in assenza totale di dati misurati.\n",
+    "   - **Modello intermedio (fit esponenziale)**: utilizza le **misurazioni fisiche parziali attuali** e informazioni dal **datasheet** del componente (es. soglia di guasto) per stimare la RUL, senza necessità di uno storico. Include anche un **intervallo di confidenza statistico** sulla stima.\n",
+    "   - **Modello a posteriori con confronto tra curve (DTW)**: richiede un archivio di curve di degrado storiche.\n",
+    "3. **Pianificazione dell'intervento**: identificazione del momento ottimale per la manutenzione, sulla base della RUL stimata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from fastdtw import fastdtw\n",
+    "from scipy.optimize import curve_fit\n",
+    "from scipy.stats import t, weibull_min"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1",
+   "id": "2",
    "metadata": {},
    "source": [
-    "## Stima RUL senza archivio storico: approccio statistico e basato su datasheet\n",
+    "## Stima RUL senza archivio storico: approccio statistico\n",
     "\n",
     "Quando l'archivio di curve storiche non è ancora disponibile (ad esempio nelle prime fasi di monitoraggio di una macchina o di un componente), non è possibile applicare direttamente metodi di similitudine temporale come il DTW.\n",
     "\n",
@@ -36,28 +50,20 @@
     "\n",
     "Questo approccio fornisce una stima grossolana della Remaining Useful Life (RUL), che può essere raffinata in seguito quando l’archivio dati sarà sufficientemente popolato.\n",
     "\n",
-    "In questo notebook, mostreremo un esempio semplice di stima statistica basata su una distribuzione parametrica tipica (Weibull), usando parametri ipotetici ricavati da datasheet."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2",
-   "metadata": {},
-   "source": [
-    "### Stima della RUL con distribuzione di Weibull\n",
+    "In questo notebook, mostreremo un esempio semplice di stima statistica basata su una distribuzione parametrica tipica (Weibull), usando parametri ipotetici ricavati dal datasheet del componente.\n",
     "\n",
-    "La distribuzione di Weibull è un modello statistico ampiamente utilizzato per rappresentare i tempi di guasto o vita utile di componenti industriali. \n",
+    "La distribuzione di Weibull è un modello statistico ampiamente utilizzato per rappresentare i tempi di guasto o di vita utile di componenti industriali. \n",
     "\n",
     "Si caratterizza principalmente per il **parametro di forma** (shape), che descrive il comportamento del guasto nel tempo:\n",
-    "- se è < 1, il tasso di guasto diminuisce (guasti precoci);\n",
-    "- se è = 1, il guasto avviene con tasso costante (guasti casuali);\n",
+    "- se è < 1, il tasso di guasto diminuisce nel tempo (guasti precoci);\n",
+    "- se è = 1, il guasto avviene con tasso costante nel tempo (guasti casuali);\n",
     "- se è > 1, il tasso di guasto aumenta nel tempo (usura).\n",
     "\n",
     "Il **parametro di scala** (scale) definisce la durata tipica del componente.\n",
     "\n",
-    "Con la Weibull possiamo stimare la probabilità che un componente sopravviva fino a un certo tempo e quindi calcolare la **Remaining Useful Life (RUL)** come tempo residuo medio di vita, condizionata al fatto che il componente ha già funzionato per un certo intervallo.\n",
+    "Con la Weibull possiamo stimare la probabilità che un componente sopravviva fino a un certo tempo e quindi calcolare la **Remaining Useful Life (RUL)** come tempo residuo medio di vita, condizionata al fatto che il componente ha già funzionato per un certo intervallo di tempo.\n",
     "\n",
-    "Questo approccio è particolarmente utile quando non si dispone ancora di dati storici reali, ma si hanno informazioni statistiche o datasheet del produttore.\n"
+    "Questo approccio è particolarmente utile quando non si dispone ancora di dati storici reali.\n"
    ]
   },
   {
@@ -67,31 +73,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import weibull_min\n",
-    "\n",
     "def estimate_rul_statistical(current_time, shape=1.5, scale=1000):\n",
-    "    \"\"\"\n",
-    "    Stima RUL basata su distribuzione di Weibull.\n",
-    "    shape: parametro di forma (beta)\n",
-    "    scale: parametro di scala (eta), ovvero vita media attesa\n",
-    "    current_time: tempo attuale di funzionamento\n",
-    "    \n",
-    "    Restituisce la vita residua media stimata a partire da current_time.\n",
-    "    \"\"\"\n",
     "    if current_time >= scale:\n",
     "        return 0\n",
-    "    \n",
+    "\n",
     "    survival_prob = weibull_min.sf(current_time, c=shape, scale=scale)\n",
     "    expected_life_total = weibull_min.mean(c=shape, scale=scale)\n",
-    "    \n",
+    "\n",
     "    expected_remaining_life = expected_life_total * survival_prob\n",
     "    return max(0, expected_remaining_life - current_time)\n",
     "\n",
+    "\n",
     "# Esempio uso con current_time scelto\n",
     "current_time_example = 150\n",
+    "shape = 1.5\n",
+    "scale = 1000\n",
     "estimated_rul_stat = estimate_rul_statistical(current_time_example)\n",
     "\n",
-    "print(f\"Tempo attuale di funzionamento: {current_time_example}\")\n",
+    "print(f\"Tempo attuale di funzionamento: {current_time_example} unità di tempo\")\n",
+    "print(f\"Parametro di forma: {shape}\")\n",
+    "print(f\"Parametro di scala: {scale}\")\n",
     "print(f\"RUL stimata (approccio statistico): {estimated_rul_stat:.2f} unità di tempo\")"
    ]
   },
@@ -100,16 +101,109 @@
    "id": "4",
    "metadata": {},
    "source": [
-    "### Utilizzo della stima statistica\n",
+    "## Stima della RUL con approccio intermedio\n",
     "\n",
-    "Questa stima fornisce una baseline RUL nelle fasi iniziali senza dati storici. Quando si inizieranno a raccogliere dati reali di funzionamento (curve di degradazione), sarà possibile passare a metodi più sofisticati basati su similarità dinamica.\n",
+    "Questo approccio intermedio si colloca tra i metodi puramente statistici (es. Weibull) e quelli data-driven avanzati (es. DTW o modelli di machine learning). L'obiettivo è stimare la RUL (Remaining Useful Life) di un componente anche in assenza di uno storico ampio, sfruttando:\n",
     "\n",
-    "La combinazione di queste due fasi consente una strategia di manutenzione predittiva che parte da ipotesi generali e si adatta progressivamente all’esperienza reale del macchinario."
+    "- **Le misurazioni fisiche attuali** (es. vibrazione, temperatura);\n",
+    "- **Un modello empirico del degrado** (lineare, esponenziale, ecc.);\n",
+    "- **La soglia di guasto dichiarata** nel datasheet del componente.\n",
+    "\n",
+    "Nel nostro esempio:\n",
+    "- Il componente è monitorato per vibrazione [mm/s];\n",
+    "- Il datasheet indica che **una vibrazione > 5 mm/s implica guasto imminente**;\n",
+    "- Abbiamo una serie di osservazioni recenti sul degrado del componente;\n",
+    "- Il trend appare **esponenziale** nel tempo.\n",
+    "\n",
+    "Stimiamo la RUL proiettando il modello di degrado verso la soglia di guasto.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parametri veri e simulazione osservazioni parziali\n",
+    "np.random.seed(42)\n",
+    "true_a, true_b = 1.0, 0.15\n",
+    "t_full = np.linspace(0, 20, 100)\n",
+    "y_true = true_a * np.exp(true_b * t_full)\n",
+    "\n",
+    "# Osservazioni fino a t = 10\n",
+    "t_obs = t_full[t_full <= 10]\n",
+    "y_obs = true_a * np.exp(true_b * t_obs) + np.random.normal(0, 0.1, size=len(t_obs))\n",
+    "\n",
+    "\n",
+    "# Fit modello esponenziale\n",
+    "def exp_model(t, a, b):\n",
+    "    return a * np.exp(b * t)\n",
+    "\n",
+    "\n",
+    "params, cov = curve_fit(exp_model, t_obs, y_obs)\n",
+    "a_hat, b_hat = params\n",
+    "stderr = np.sqrt(np.diag(cov))\n",
+    "\n",
+    "# Soglia di guasto\n",
+    "failure_threshold = 5.0\n",
+    "\n",
+    "# Stima del tempo di guasto\n",
+    "t_failure_est = np.log(failure_threshold / a_hat) / b_hat\n",
+    "t_failure_true = np.log(failure_threshold / true_a) / true_b\n",
+    "\n",
+    "# Intervallo di confidenza\n",
+    "alpha = 0.05\n",
+    "dof = len(t_obs) - len(params)\n",
+    "t_score = t.ppf(1 - alpha / 2, dof)\n",
+    "\n",
+    "partial_a = -1 / (a_hat * b_hat)\n",
+    "partial_b = -np.log(failure_threshold / a_hat) / (b_hat**2)\n",
+    "var_t_failure = (\n",
+    "    (partial_a**2) * cov[0, 0]\n",
+    "    + (partial_b**2) * cov[1, 1]\n",
+    "    + 2 * partial_a * partial_b * cov[0, 1]\n",
+    ")\n",
+    "conf_interval = t_score * np.sqrt(var_t_failure)\n",
+    "\n",
+    "# Predizione modello stimato\n",
+    "t_range = np.linspace(0, max(t_failure_est + 5, t_failure_true + 5), 200)\n",
+    "y_fit = exp_model(t_range, a_hat, b_hat)\n",
+    "\n",
+    "# Visualizzazione\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(t_obs, y_obs, label=\"Osservazioni\", color=\"blue\")\n",
+    "plt.plot(t_range, y_fit, label=\"Fit esponenziale\", color=\"green\")\n",
+    "plt.axhline(failure_threshold, color=\"red\", linestyle=\"--\", label=\"Soglia guasto\")\n",
+    "\n",
+    "# Stime guasto e intervallo confidenza\n",
+    "plt.axvline(t_failure_est, color=\"orange\", linestyle=\"--\", label=\"Stima t_guasto\")\n",
+    "plt.fill_betweenx(\n",
+    "    [0, failure_threshold],\n",
+    "    t_failure_est - conf_interval,\n",
+    "    t_failure_est + conf_interval,\n",
+    "    color=\"orange\",\n",
+    "    alpha=0.3,\n",
+    "    label=\"Intervallo conf. 95%\",\n",
+    ")\n",
+    "\n",
+    "plt.xlabel(\"Tempo [giorni]\")\n",
+    "plt.ylabel(\"Vibrazioni [mm/s]\")\n",
+    "plt.title(\"Curva di degrado: modello stimato + intervallo confidenza\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"Stima t_guasto: {t_failure_est:.2f} giorni\")\n",
+    "print(\n",
+    "    f\"Intervallo di confidenza 95%: [{t_failure_est - conf_interval:.2f}, {t_failure_est + conf_interval:.2f}] giorni\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "source": [
     "## Stima della RUL basata su similarità temporale (DTW)\n",
@@ -125,26 +219,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
-    "### Simulazione e visualizzazione delle curve di degrado\n",
+    "### Simulazione e visualizzazione di curve di degrado su più segnali\n",
     "\n",
-    "Per testare gli algoritmi, generiamo un archivio sintetico di curve multivariate di degrado simulato. Ogni curva rappresenta un profilo di feature di degradazione nel tempo, con un'esplosione esponenziale verso la fine."
+    "Per testare l’approccio basato sul confronto tra andamenti temporali simili, generiamo un archivio sintetico di curve di degrado. Ogni curva rappresenta come cambia nel tempo lo stato di un componente, osservando più segnali contemporaneamente (ad esempio: vibrazioni, temperatura, consumo elettrico).\n",
+    "\n",
+    "Questi segnali simulano il comportamento reale di una macchina che si degrada: inizialmente stabili, poi peggiorano progressivamente fino al guasto. Le curve complete serviranno da riferimento per stimare il tempo residuo di vita (RUL) confrontandole con dati parziali osservati in tempo reale."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from fastdtw import fastdtw\n",
-    "\n",
-    "\n",
     "def generate_archive(num_curves=100, min_length=100, max_length=1000, n_features=3):\n",
     "    archive = []\n",
     "    for _ in range(num_curves):\n",
@@ -199,18 +290,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "### Test della stima RUL basata su archivio\n",
     "\n",
-    "Simuliamo una curva parziale corrente di lunghezza casuale e stimiamo la RUL usando la similarità con le curve dell'archivio."
+    "Ora che disponiamo di un archivio di curve storiche simulate, possiamo testare un approccio basato sulla similarità dinamica. In particolare:\n",
+    "\n",
+    "- Generiamo una **curva parziale** rappresentante il comportamento corrente di un componente;\n",
+    "- Confrontiamo questa curva con tutte quelle nell'archivio tramite **Dynamic Time Warping (DTW)**;\n",
+    "- Identifichiamo la curva più simile nel comportamento iniziale;\n",
+    "- Stimiamo la **Remaining Useful Life (RUL)** come la differenza tra la durata completa della curva storica e il punto corrente della curva osservata.\n",
+    "\n",
+    "Questo metodo sfrutta la forma complessiva della traiettoria per fornire una stima più realistica della RUL rispetto ad approcci puramente statistici, specialmente quando i dati reali iniziano ad accumularsi."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,19 +372,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
-    "## Conclusioni\n",
+    "### 📝 Conclusioni\n",
     "\n",
-    "In questo notebook abbiamo esplorato due approcci complementari per la stima della Remaining Useful Life (RUL):\n",
+    "In questo notebook abbiamo esplorato un esempio semplice e didattico di manutenzione predittiva, evidenziando tre diversi approcci per la stima della Remaining Useful Life (RUL):\n",
     "\n",
-    "- Un metodo statistico preliminare basato su modelli parametrici (Weibull) utile quando non è ancora disponibile un archivio storico,\n",
-    "- Un metodo basato su similarità temporale multivariata (DTW) applicato a un archivio di curve di degradazione raccolte nel tempo.\n",
+    "- Il modello statistico basato sulla distribuzione di Weibull, utile in assenza di dati misurati.\n",
+    "- Un modello intermedio, che sfrutta misurazioni fisiche attuali e informazioni di progetto (datasheet), fornendo una stima della RUL con intervallo di confidenza, anche in assenza di dati storici estesi.\n",
+    "- Il modello a posteriori basato sul confronto dinamico di curve di degrado (DTW), efficace quando è disponibile un archivio di dati storici simili.\n",
     "\n",
-    "Questo workflow permette di affrontare la manutenzione predittiva in maniera graduale e flessibile, passando da stime basate su dati teorici e specifiche di macchina, a stime basate su dati operativi effettivi.\n",
-    "\n",
-    "L’approccio proposto può essere ulteriormente arricchito integrando modelli di machine learning più avanzati, sensori aggiuntivi e meccanismi di aggiornamento continuo dei modelli di RUL man mano che i dati vengono acquisiti."
+    "Per applicazioni reali, sarà necessario calibrare e validare i modelli con dati specifici e valutare l’integrazione in sistemi di monitoraggio continuo."
    ]
   }
  ],
