--- a/2. Smart factory/genetic_algorithm.ipynb
+++ b/2. Smart factory/genetic_algorithm.ipynb
@@ -309,12 +309,14 @@
     "num_snapshots = len(pop_snapshots)\n",
     "cols = 3\n",
     "rows = (num_snapshots + cols - 1) // cols\n",
-    "fig, axes = plt.subplots(rows, cols, figsize=(cols*5, rows*4))\n",
+    "fig, axes = plt.subplots(rows, cols, figsize=(cols * 5, rows * 4))\n",
     "axes = axes.flatten()\n",
     "\n",
     "for i, (pop_plot, gen_num) in enumerate(zip(pop_snapshots, gen_snapshots)):\n",
     "    axes[i].plot(x_vals, y_vals, label=\"Funzione obiettivo\")\n",
-    "    axes[i].scatter(pop_plot, fitness_function(pop_plot), color=\"red\", label=\"Popolazione\")\n",
+    "    axes[i].scatter(\n",
+    "        pop_plot, fitness_function(pop_plot), color=\"red\", label=\"Popolazione\"\n",
+    "    )\n",
     "    axes[i].set_title(f\"Generazione {gen_num}\")\n",
     "    axes[i].set_xlabel(\"x\")\n",
     "    axes[i].set_ylabel(\"f(x)\")\n",
@@ -322,8 +324,8 @@
     "    axes[i].grid(True)\n",
     "\n",
     "# Disabilita eventuali assi extra vuoti\n",
-    "for j in range(i+1, len(axes)):\n",
-    "    axes[j].axis('off')\n",
+    "for j in range(i + 1, len(axes)):\n",
+    "    axes[j].axis(\"off\")\n",
     "\n",
     "# Plot unico andamento fitness\n",
     "plt.figure(figsize=(10, 6))\n",
@@ -336,7 +338,7 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -430,12 +432,14 @@
     "num_snapshots = len(pop_snapshots)\n",
     "cols = 3\n",
     "rows = (num_snapshots + cols - 1) // cols\n",
-    "fig, axes = plt.subplots(rows, cols, figsize=(cols*5, rows*4))\n",
+    "fig, axes = plt.subplots(rows, cols, figsize=(cols * 5, rows * 4))\n",
     "axes = axes.flatten()\n",
     "\n",
     "for i, (pop_plot, gen_num) in enumerate(zip(pop_snapshots, gen_snapshots)):\n",
     "    axes[i].plot(x_vals, y_vals, label=\"Funzione obiettivo\")\n",
-    "    axes[i].scatter(pop_plot, fitness_function(pop_plot), color=\"red\", label=\"Popolazione\")\n",
+    "    axes[i].scatter(\n",
+    "        pop_plot, fitness_function(pop_plot), color=\"red\", label=\"Popolazione\"\n",
+    "    )\n",
     "    axes[i].set_title(f\"Generazione {gen_num}\")\n",
     "    axes[i].set_xlabel(\"x\")\n",
     "    axes[i].set_ylabel(\"f(x)\")\n",
@@ -443,8 +447,8 @@
     "    axes[i].grid(True)\n",
     "\n",
     "# Disabilita eventuali assi extra vuoti\n",
-    "for j in range(i+1, len(axes)):\n",
-    "    axes[j].axis('off')\n",
+    "for j in range(i + 1, len(axes)):\n",
+    "    axes[j].axis(\"off\")\n",
     "\n",
     "# Plot unico andamento fitness\n",
     "plt.figure(figsize=(10, 6))\n",
