--- a/3. Supply chain/forecasting.ipynb
+++ b/3. Supply chain/forecasting.ipynb
@@ -22,24 +22,20 @@
    "outputs": [],
    "source": [
     "import datetime\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import GridSearchCV, TimeSeriesSplit\n",
     "from sklearn.metrics import mean_absolute_error, root_mean_squared_error\n",
-    "\n",
+    "from sklearn.model_selection import GridSearchCV, TimeSeriesSplit\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "\n",
-    "from xgboost import XGBRegressor, plot_importance\n",
-    "\n",
-    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.layers import Dense, Input\n",
+    "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n"
+    "from xgboost import XGBRegressor"
    ]
   },
   {
@@ -59,17 +55,24 @@
    "source": [
     "np.random.seed(42)\n",
     "n_days = 365 * 2\n",
-    "date_range = pd.date_range(start=datetime.datetime.now(), periods=n_days, freq='D')\n",
+    "date_range = pd.date_range(start=datetime.datetime.now(), periods=n_days, freq=\"D\")\n",
     "\n",
-    "temperature = 10 + 15 * np.sin(2 * np.pi * date_range.dayofyear / 365) + np.random.normal(0, 2, n_days)\n",
+    "temperature = (\n",
+    "    10\n",
+    "    + 15 * np.sin(2 * np.pi * date_range.dayofyear / 365)\n",
+    "    + np.random.normal(0, 2, n_days)\n",
+    ")\n",
     "price = np.random.uniform(8, 12, n_days)\n",
     "promotion = np.random.binomial(1, 0.3, n_days)\n",
     "\n",
-    "df = pd.DataFrame({\n",
-    "    'temperature': temperature,\n",
-    "    'price': price,\n",
-    "    'promotion': promotion,\n",
-    "}, index=date_range)\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"temperature\": temperature,\n",
+    "        \"price\": price,\n",
+    "        \"promotion\": promotion,\n",
+    "    },\n",
+    "    index=date_range,\n",
+    ")\n",
     "\n",
     "target = (\n",
     "    50\n",
@@ -78,11 +81,11 @@
     "    + 0.5 * temperature\n",
     "    - 0.05 * temperature**2\n",
     "    + 10 * np.sin(2 * np.pi * date_range.dayofyear / 365)\n",
-    "    + 5 * np.cos(2 * np.pi * date_range.dayofyear / (365/2))\n",
+    "    + 5 * np.cos(2 * np.pi * date_range.dayofyear / (365 / 2))\n",
     "    + np.random.normal(0, 3, n_days)\n",
     ")\n",
     "\n",
-    "df[\"sales\"] = pd.Series(target, index=date_range, name='sales')\n"
+    "df[\"sales\"] = pd.Series(target, index=date_range, name=\"sales\")"
    ]
   },
   {
@@ -117,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[['sales', 'price', 'promotion', 'temperature']].plot(subplots=True, figsize=(12, 8))\n",
+    "df[[\"sales\", \"price\", \"promotion\", \"temperature\"]].plot(subplots=True, figsize=(12, 8))\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -161,21 +164,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = seasonal_decompose(df[\"sales\"], model='additive', period=12)\n",
+    "result = seasonal_decompose(df[\"sales\"], model=\"additive\", period=12)\n",
     "\n",
     "plt.figure(figsize=(12, 8))\n",
     "plt.subplot(411)\n",
-    "plt.plot(df[\"sales\"], label='Originale')\n",
-    "plt.legend(loc='upper left')\n",
+    "plt.plot(df[\"sales\"], label=\"Originale\")\n",
+    "plt.legend(loc=\"upper left\")\n",
     "plt.subplot(412)\n",
-    "plt.plot(result.trend, label='Trend')\n",
-    "plt.legend(loc='upper left')\n",
+    "plt.plot(result.trend, label=\"Trend\")\n",
+    "plt.legend(loc=\"upper left\")\n",
     "plt.subplot(413)\n",
-    "plt.plot(result.seasonal, label='Stagionalità')\n",
-    "plt.legend(loc='upper left')\n",
+    "plt.plot(result.seasonal, label=\"Stagionalità\")\n",
+    "plt.legend(loc=\"upper left\")\n",
     "plt.subplot(414)\n",
-    "plt.plot(result.resid, label='Residui')\n",
-    "plt.legend(loc='upper left')\n",
+    "plt.plot(result.resid, label=\"Residui\")\n",
+    "plt.legend(loc=\"upper left\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -197,12 +200,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['dayofweek'] = df.index.dayofweek\n",
-    "df['month'] = df.index.month\n",
-    "df = pd.get_dummies(df, columns=['dayofweek', 'month'], drop_first=True)\n",
+    "df[\"dayofweek\"] = df.index.dayofweek\n",
+    "df[\"month\"] = df.index.month\n",
+    "df = pd.get_dummies(df, columns=[\"dayofweek\", \"month\"], drop_first=True)\n",
     "\n",
-    "df['sales_ma7'] = df['sales'].rolling(window=7).mean()\n",
-    "df['sales_lag1'] = df['sales'].shift(1)\n",
+    "df[\"sales_ma7\"] = df[\"sales\"].rolling(window=7).mean()\n",
+    "df[\"sales_lag1\"] = df[\"sales\"].shift(1)\n",
     "\n",
     "df.dropna(inplace=True)"
    ]
@@ -257,7 +260,7 @@
     "X_test = df[features].iloc[split_index:]\n",
     "\n",
     "y_train = df[target].iloc[:split_index]\n",
-    "y_test = df[target].iloc[split_index:]\n"
+    "y_test = df[target].iloc[split_index:]"
    ]
   },
   {
@@ -286,8 +289,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
     "# Creiamo uno scaler e lo \"addestriamo\" solo sui dati di training\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
@@ -316,7 +317,7 @@
    "outputs": [],
    "source": [
     "ridge = Ridge()\n",
-    "param_grid = {'alpha': [0.1, 1.0, 10.0, 100.0]}\n",
+    "param_grid = {\"alpha\": [0.1, 1.0, 10.0, 100.0]}\n",
     "tscv = TimeSeriesSplit(n_splits=5)\n",
     "grid = GridSearchCV(ridge, param_grid, cv=tscv)\n",
     "grid.fit(X_train_scaled, y_train)\n",
@@ -367,16 +368,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential([\n",
-    "    Input(shape=(X_train_scaled.shape[1],)),\n",
-    "    Dense(32, activation='relu'),\n",
-    "    Dense(16, activation='relu'),\n",
-    "    Dense(1)\n",
-    "])\n",
-    "model.compile(optimizer=Adam(learning_rate=0.01), loss='mse')\n",
+    "model = Sequential(\n",
+    "    [\n",
+    "        Input(shape=(X_train_scaled.shape[1],)),\n",
+    "        Dense(32, activation=\"relu\"),\n",
+    "        Dense(16, activation=\"relu\"),\n",
+    "        Dense(1),\n",
+    "    ]\n",
+    ")\n",
+    "model.compile(optimizer=Adam(learning_rate=0.01), loss=\"mse\")\n",
     "\n",
     "es = EarlyStopping(patience=10, restore_best_weights=True)\n",
-    "model.fit(X_train_scaled, y_train, validation_split=0.2, epochs=100, callbacks=[es], verbose=0)\n",
+    "model.fit(\n",
+    "    X_train_scaled, y_train, validation_split=0.2, epochs=100, callbacks=[es], verbose=0\n",
+    ")\n",
     "\n",
     "y_pred_mlp = model.predict(X_test_scaled).flatten()"
    ]
@@ -399,7 +404,8 @@
     "def evaluate(y_true, y_pred, name):\n",
     "    mae = mean_absolute_error(y_true, y_pred)\n",
     "    rmse = root_mean_squared_error(y_true, y_pred)\n",
-    "    print(f'{name} → MAE: {mae:.2f}, RMSE: {rmse:.2f}')\n",
+    "    print(f\"{name} → MAE: {mae:.2f}, RMSE: {rmse:.2f}\")\n",
+    "\n",
     "\n",
     "evaluate(y_test, y_pred_ridge, \"Ridge\")\n",
     "evaluate(y_test, y_pred_xgb, \"XGBoost\")\n",
@@ -416,7 +422,7 @@
     "Per confrontare i modelli usiamo due indicatori:\n",
     "\n",
     "- **MAE**: Errore Assoluto Medio, misura quanto in media sbaglia il modello\n",
-    "- **RMSE**: Errore Quadratico Medio, penalizza maggiormente gli errori grandi\n",
+    "- **RMSE**: Scarto Quadratico Medio, penalizza maggiormente gli errori grandi\n",
     "\n",
     "Più questi valori sono bassi, migliore è la previsione."
    ]
@@ -437,12 +443,12 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12, 6))\n",
-    "plt.plot(y_test.index, y_test, label='True')\n",
-    "plt.plot(y_test.index, y_pred_ridge, label='Ridge')\n",
-    "plt.plot(y_test.index, y_pred_xgb, label='XGBoost')\n",
-    "plt.plot(y_test.index, y_pred_mlp, label='MLP')\n",
+    "plt.plot(y_test.index, y_test, label=\"True\")\n",
+    "plt.plot(y_test.index, y_pred_ridge, label=\"Ridge\")\n",
+    "plt.plot(y_test.index, y_pred_xgb, label=\"XGBoost\")\n",
+    "plt.plot(y_test.index, y_pred_mlp, label=\"MLP\")\n",
     "plt.legend()\n",
-    "plt.title('Confronto delle predizioni')\n",
+    "plt.title(\"Confronto delle predizioni\")\n",
     "plt.show()"
    ]
   },
@@ -474,20 +480,20 @@
     "\n",
     "fig, axes = plt.subplots(1, 3, figsize=(18, 5), sharey=True)\n",
     "\n",
-    "axes[0].hist(ape_ridge, bins=30, color='tab:blue', alpha=0.7)\n",
-    "axes[0].set_title('Ridge')\n",
-    "axes[0].set_xlabel('Errore Percentuale Assoluto (%)')\n",
-    "axes[0].set_ylabel('Frequenza')\n",
+    "axes[0].hist(ape_ridge, bins=30, color=\"tab:blue\", alpha=0.7)\n",
+    "axes[0].set_title(\"Ridge\")\n",
+    "axes[0].set_xlabel(\"Errore Percentuale Assoluto (%)\")\n",
+    "axes[0].set_ylabel(\"Frequenza\")\n",
     "\n",
-    "axes[1].hist(ape_xgb, bins=30, color='tab:orange', alpha=0.7)\n",
-    "axes[1].set_title('XGBoost')\n",
-    "axes[1].set_xlabel('Errore Percentuale Assoluto (%)')\n",
+    "axes[1].hist(ape_xgb, bins=30, color=\"tab:orange\", alpha=0.7)\n",
+    "axes[1].set_title(\"XGBoost\")\n",
+    "axes[1].set_xlabel(\"Errore Percentuale Assoluto (%)\")\n",
     "\n",
-    "axes[2].hist(ape_mlp, bins=30, color='tab:green', alpha=0.7)\n",
-    "axes[2].set_title('MLP')\n",
-    "axes[2].set_xlabel('Errore Percentuale Assoluto (%)')\n",
+    "axes[2].hist(ape_mlp, bins=30, color=\"tab:green\", alpha=0.7)\n",
+    "axes[2].set_title(\"MLP\")\n",
+    "axes[2].set_xlabel(\"Errore Percentuale Assoluto (%)\")\n",
     "\n",
-    "plt.suptitle('Distribuzione degli errori percentuali assoluti per modello')\n",
+    "plt.suptitle(\"Distribuzione degli errori percentuali assoluti per modello\")\n",
     "plt.tight_layout(rect=[0, 0, 1, 0.95])\n",
     "plt.show()"
    ]
