Aggiornato e migliorato stock optimization

--- a/2. Smart factory/predictive_maintenance.ipynb
+++ b/2. Smart factory/predictive_maintenance.ipynb
@@ -214,7 +214,9 @@
     "\n",
     "Nel notebook implementiamo un algoritmo che, data una curva parziale corrente, individua la curva più simile nell'archivio e usa la differenza di lunghezza per stimare la RUL residua.\n",
     "\n",
-    "Questo metodo è particolarmente utile per sistemi multivariati dove più feature sono monitorate contemporaneamente."
+    "Questo metodo è particolarmente utile per sistemi multivariati dove più feature sono monitorate contemporaneamente.\n",
+    "\n",
+    "> **Nota:** anziché basarsi solo sulla curva storica più simile (*nearest neighbor*), è generalmente preferibile considerare le *k* curve più simili e stimare la RUL come media (o mediana) delle rispettive RUL residue. Questo permette di ridurre l’effetto di outlier o rumore in singole curve storiche, migliorando la robustezza della previsione."
    ]
   },
   {
