Corretto bug service level

--- a/3. Supply chain/stock_optimization.ipynb
+++ b/3. Supply chain/stock_optimization.ipynb
@@ -141,6 +141,7 @@
    "outputs": [],
    "source": [
     "# Simulazione dello stock con più ordini e lead time\n",
+    "service_level = 0.95\n",
     "qta_ordine = stock_iniziale\n",
     "ordini_effettuati = []\n",
     "\n",
